--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.0.20",
+    "babel-polyfill": "^6.26.0",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
+    "immutable": "^4.1.0",
+    "lodash": "^4.17.21",
     "maxlength-contenteditable": "^1.0.1",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.6",
